--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.508.0",
     "next": "15.3.2",
